# skg-if-shacl-extractor

./: .gitmodules  README.md  main.py  onto.ttl  pyproject.toml  shacl.ttl  shapes.ttl  test_main.py
.github/workflows/: tests.yml
src/: main.py
