[tool.poetry]
name = "skg-if-shacl-extractor"
version = "0.1.0"
description = ""
authors = ["arcangelo7 <arcangelomas@gmail.com>"]
license = "ISC License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
